lastest change for number 23 in biblo

--- a/MasterThesis/Smart_Contract.tex
+++ b/MasterThesis/Smart_Contract.tex
@@ -17,7 +17,7 @@
 \usepackage{changepage}
 \usepackage{enumitem}
 \usepackage{multicol}
-
+\usepackage{tablefootnote}
 \usepackage{mathtools}
 \usepackage[export]{adjustbox}
 \usepackage[square,sort,comma,numbers]{natbib}
@@ -26,11 +26,11 @@
 %\include{mymacros}
 
 \title{Semantic Smart Contracts   %your thesis title,
-      And Their Integration With Semantic Data Licensing} 
+      and Their Integration with Semantic Data Licensing} 
           %note \\[1ex] is a line break in the title
 
 \author{Zahra Jafari \\
-Supervisor: Prof. Dr. Anna Fense} 
+Supervisor: Prof. Dr. Anna Fensel} 
 
 \college{Department of Computer Science \\
 Semantic Technology Institute Innsbruck}
