--- a/MasterThesis/biblio.bib
+++ b/MasterThesis/biblio.bib
@@ -8,7 +8,7 @@
       url = {https://eprint.iacr.org/2016/1156}
 },
 @inproceedings{Matthew,
-  title={Block chain technologies \& the semantic web: A framework for symbiotic development},
+  title={Blockchain technologies \& the semantic web: A framework for symbiotic development},
   author={English, Matthew and Auer, S{\"o}ren and Domingue, John},
   booktitle={Computer Science Conference for University of Bonn Students},
   url = {http://cscubs.cs.uni-bonn.de/2016/proceedings/paper-10.pdf},
@@ -18,12 +18,12 @@
 },
  
 @article{Christidis,
-	author={Konstantinos Christidis{,} Michael Devetsikiotis},
+	author={Konstantinos Christidis and Michael Devetsikiotis},
 	title = {Blockchains and Smart Contracts for
 	the Internet of Things},
 	journal = {Spacial section on the plethora of research in internet of thing (IoT)},
     publisher = IEEE,
-    volume = 12,
+	volume = 12,
     pages = {2292 -- 2303},
     year = {2016},
     month = {3}, 
@@ -75,14 +75,7 @@
   year={2014}
 },
 
-@article{Wesley,
-  title={Replacing paper contracts with Ethereum smart contracts},
-  author={Egbertsen, Wesley and Hardeman, Gerdinand and van den Hoven, Maarten and van der Kolk, Gert and van Rijsewijk, Arthur},
-  journal={Semantic Scholar},
-  volume={35},
-  pages={1--35},
-  year={2016}
-}
+
 
 @article{Hector,
 	author = {Hector Ugarte}, 
@@ -97,7 +90,7 @@
 
 @article{Jose,
   title={Distributed ledger technology},
-  author={Sunyaev, Ali and Sunyaev, Ali},
+  author={Sunyaev, Ali},
   journal={Internet computing: Principles of distributed systems and emerging internet-based technologies},
   pages={265--299},
   year={2020},
@@ -107,6 +100,7 @@
 @inproceedings{kalra,
   title={Zeus: analyzing safety of smart contracts.},
   author={Kalra, Sukrit and Goel, Seep and Dhawan, Mohan and Sharma, Subodh},
+  url={https://www.ndss-symposium.org/wp-content/uploads/2018/02/ndss2018_09-1_Kalra_paper.pdf},
   booktitle={Ndss},
   pages={1--12},
   year={2018}
@@ -124,7 +118,7 @@
 },
 
 @article{Rashid,
-   author = {Umar Rashid{,} Allan Third{,} John Domingue},  
+   author = {Umar Rashid{,} Allan Third{,} and John Domingue},  
    title = {Web Service for Semantic Negotiation of Smart Contracts},
    url = {https://openreview.net/forum?id=BJg2gCu1e7.}, 
    publisher = {ISWC 2018 DeSemWeb Comment},
@@ -134,7 +128,7 @@
  },
 @inproceedings{Sopek,
   title={Deriving validity time in knowledge graph},
-  author={Mirek Sopek{,} Przemyslaw Gradzki{,} Witold Kosowski {,} Dominik Kozuski{,} Rafa Troczak{,} Robert Trypuz},
+  author={Mirek Sopek{,} Przemyslaw Gradzki{,} Witold Kosowski{,} Dominik Kozuski{,} Rafa Troczak{,} and Robert Trypuz},
   booktitle={Companion proceedings of the the web conference 2018},
   pages={1771--1776},
   year={2018},
@@ -156,7 +150,8 @@
 
 @book{Natarajan,
   title = {Distributed Ledger Technology(DLT) and Blockchain},
-  author = {Natarajan{,} Harish{,} Krause{,} Solvej{,} Gradstein{,} Helen},
+  author = {Natarajan, Harish and Krause, Solvej and Gradstein, Helen},
+  url={https://documents1.worldbank.org/curated/en/177911513714062215/pdf/122140-WP-PUBLIC-Distributed-Ledger-Technology-and-Blockchain-Fintech-Notes.pdf},
   year = {2017},
   volume = {60},
   URI = {http://hdl.handle.net/10986/29053},
@@ -185,6 +180,7 @@
 @article{Kujur,
   title={Evolution of the world wide web: From WEB 1.0 TO WEB 4.0},
   author={Aghaei, Sareh and Nematbakhsh, Mohammad Ali and Farsani, Hadi Khosravi},
+  url={https://airccse.org/journal/ijwest/papers/3112ijwest01.pdf},
   journal={International Journal of Web \& Semantic Technology},
   volume={3},
   number={1},
@@ -195,7 +191,7 @@
 
 @article{Luke, 
   title={Blockchain in electricity: a critical review of progress to date},
-  author = {Max Luke{,} Anna Dimitrova{,} Stephen James Lee{,} Zdenek Pekarek},  
+  author = {Max Luke{,} Anna Dimitrova{,} Stephen James Lee{,} and Zdenek Pekarek},  
   url = {https://www.researchgate.net/publication/332138382}, 
   journal={NERA Econ. Consult. eurelectric},
   volume = {36},
@@ -206,6 +202,7 @@
   title={Blockchain Technology and its Types—A Short Review},
   author={Paul, P and Aithal, PS and Saavedra, Ricardo},
   journal={International Journal of Applied Science and Engineering (IJASE)},
+  url={https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4050933},
   volume={9},
   number={2},
   pages={189--200},
@@ -226,6 +223,7 @@
   title={Ethereum, smart contracts, DApps},
   author={Metcalfe, William and others},
   journal={Blockchain and Crypt Currency},
+  url={https://library.oapen.org/bitstream/handle/20.500.12657/37713/2020_Book_BlockchainAndCryptCurrency.pdf?sequence=1#page=88},
   volume={77},
   year={2020},
   publisher={Springer Singapore}
@@ -234,6 +232,7 @@
 @inproceedings{Payrott,
   title={Towards analyzing the complexity landscape of solidity based ethereum smart contracts},
   author={Heged{\H{u}}s, P{\'e}ter},
+  url={https://ieeexplore.ieee.org/document/8445056},
   booktitle={Proceedings of the 1st International Workshop on Emerging Trends in Software Engineering for Blockchain},
   publisher = {ACM Digital Library home},
   pages={35--39},
@@ -244,6 +243,7 @@
   title={DALICC: a license management framework for digital assets},
   author={Pellegrini, Tassilo and Havur, Giray and Steyskal, Simon and Panasiuk, Oleksandra and Fensel, Anna and Mireles, Victor and Thurner, Thomas and Polleres, Axel and Kirrane, Sabrina and Sch{\"o}nhofer, Andrea},
   journal={Proceedings of the Internationales Rechtsinformatik Symposion (IRIS)},
+  url={https://www.researchgate.net/publication/332414717_DALICC_A_LICENSE_MANAGEMENT_FRAMEWORK_FOR_DIGITAL_ASSETS},
   volume={10},
   year={2019}
 },
@@ -257,7 +257,7 @@
   publisher={Springer}
 }
 @article{Dworkin, 
-  Author = {Morris J.Dworkin},  
+  Author = {Morris J. Dworkin},  
   title = {SHA-3 Standard: Permutation-Based Hash and Extendable-Output Functions },
   doi = {http://dx.doi.org/10.6028/NIST.FIPS.202}, 
   url = {https://www.nist.gov/publications/sha-3-standard-permutation-based-hash-and-extendable-output-functions},
@@ -265,11 +265,7 @@
   volume ={37},
   year = {2015},
 },
-<<<<<<< HEAD
 @article{Ozsu,
-=======
-@article{ozsu,
->>>>>>> 4f5b61cf81675c1ae6b7f9a720b06972fe8a6f24
   title={Distributed and parallel database systems},
   author={{\"O}zsu, M Tamer and Valduriez, Patrick},
   journal={ACM Computing Surveys (CSUR)},
@@ -283,12 +279,14 @@
   title={A semantic framework for the security analysis of ethereum smart contracts},
   author={Grishchenko, Ilya and Maffei, Matteo and Schneidewind, Clara},
   booktitle={Principles of Security and Trust: 7th International Conference, POST 2018, Held as Part of the European Joint Conferences on Theory and Practice of Software, ETAPS 2018, Thessaloniki, Greece, April 14-20, 2018, Proceedings 7},
+  url={https://link.springer.com/chapter/10.1007/978-3-319-89722-6_10},
   pages={243--269},
   year={2018},
   organization={Springer}
 },
+
 @article{Egbertsen, 
-	author = {Wesley Egbertsen{,} Gerdinand Hardeman{,} Maarten van den Hoven{,} Gert van der Kolk and Arthur van ijsewijk},  
+	author = {Wesley Egbertsen{,} Gerdinand Hardeman{,} Maarten van den Hoven{,} Gert van der Kolk{,} and Arthur van Rijsewijk},  
 	title = {Replacing Paper Contracts With Ethereum Smart Contracts Contract Innovation with Ethereum},
 	url = {https://allquantor.at/blockchainbib/pdf/egbertsen2016replacing.pdf},
     journal={Semantic Scholar},
@@ -299,6 +297,7 @@
 @article{Gavin, 
   title={Ethereum: A secure decentralised generalised transaction ledger},
   author={Wood, Gavin and others},
+  url={https:gavwood.com/paper.pdf},
   journal={Ethereum project yellow paper},
   volume={151},
   number={2014},
@@ -323,12 +322,15 @@
   number={1},
   pages={1--9},
   year={1964},
+  DOI={10.1109/TCOM.1964.1088883},
+  url={https://www.rand.org/content/dam/rand/pubs/papers/2005/P2626.pdf},
   publisher={IEEE}
 },
 @article{Masood,
   title={An overview of distributed ledger technology and its applications},
   author={Masood, Faraz and Faridi, Arman Rasool},
   journal={International Journal of Computer Sciences and Engineering},
+  url={https://www.researchgate.net/publication/330139945_An_Overview_of_Distributed_Ledger_Technology_and_its_Applications},
   volume={6},
   number={10},
   pages={422--427},
@@ -336,28 +338,31 @@
 },
 @article{Szabo, 
 	author = {Nick Szabo},  
-	title = {Smart Contracts: Building Blocks for Digital Markets},
-	url = {http://www.truevaluemetrics.org/DBpdfs/BlockChain/Nick-Szabo-Smart-Contracts-Building-Blocks-for-Digital-Markets-1996-14591.pdf}, 
-     journal={URL: http://www. fon. hum. uva. nl/rob/Courses/InformationInSpeech/CDROM/Literature/LOTwinterschool2006/szabo. best. vwh. net/smart\_ contracts\_2. html (дата обращения: 30 июля 2018 г.)},
-	volume = {11},
-	year = {2017},
-},
+    title={Smart Contracts: Building Blocks for Digital Markets},
+    year={2018},
+    url={https://www.researchgate.net/publication/340376424_Smart_Contracts_Building_Blocks_for_Digital_Transformation},
+    journal={EXTROPY: The Journal of Transhumanist Thought,(16)},
+} ,
+
 @incollection{Tim,
   title={Linked data: The story so far},
   author={Bizer, Christian and Heath, Tom and Berners-Lee, Tim},
   booktitle={Semantic services, interoperability and web applications: emerging concepts},
+  url={http://tomheath.com/papers/bizer-heath-berners-lee-ijswis-linked-data.pdf},
   pages={205--227},
   year={2011},
   publisher={IGI global}
 },
-@masterthesis{David,
-title={Creation of national semantic licenses and their
-attachment to data and content},
-author={David Gatta, Kilian Hinteregger},
-year={2020},
-school={Semantic Technology Institute Innsbruck},
-}
 
+@inproceedings{David,
+  title={Making Licensing of Content and Data Explicit with Semantics and Blockchain},
+  author={David Gatta{,} Kilian Hinteregger{,} and Anna Fensel},
+  booktitle={Information Management and Big Data - 8th Annual International Conference, SIMBig 2021, Proceedings},
+  publisher = {Cham : Springer (Communications in Computer and Information Science)},
+  pages={370--379},
+  doi = {https://doi.org/10.1007/978-3-031-04447-2_25}, 
+  year={2022}
+}
 
 
 
