--- a/MasterThesis/chapter2.tex
+++ b/MasterThesis/chapter2.tex
@@ -124,7 +124,7 @@ Recent growth in the adoption of blockchain technology has increased the demand 
 The idea of using semantic web technology with blockchain is new, and how to implement it with smart contracts is also up for debate\\
 The following are some \textbf{definitions of semantic  blockchain:} \\
 \textit{- Semantic blockchain is the application of semantic web standards on the blockchain; these standards are based on RDF.}\\
-\textit{-Semantic blockchain is the representation of stored data on a distributed ledger using linked data \cite{Hector}.}\\
+\textit{- Semantic blockchain is the representation of stored data on a distributed ledger using linked data \cite{Hector}.}\\
 \subsection{Semantification Process}
 The industrial world is impacted by semantic blockchain or semantic distributed ledger, and as a result, new applications and frameworks are being developed to bridge the two worlds. \\ 
 There are some ways to semantify blockchain, as follows:\\
@@ -141,7 +141,7 @@ Blockchain only keeps a binary form of each contract together with its associate
 			\centering
 			\includegraphics[width=1.95\textwidth]{images/chap02_SmartContract_ABI.png}
 		\end{minipage}
-		\caption[Smart contract application binary interface (ABI)]{Smart contract application Bbinary interface (ABI) \cit{Third}}
+		\caption[Smart contract application binary interface (ABI)]{Smart contract application binary interface (ABI) \cite{Third}}
 		
 	\end{figure}
 	
