--- a/MasterThesis/introduction.tex
+++ b/MasterThesis/introduction.tex
@@ -2,11 +2,11 @@
 Distributed ledger on the blockchain has gained popularity recently \cite{Third}. The characteristics of blockchain that make it valuable for cryptocurrencies, such as proof of consensus, safe transactions, and transparency, also make it appropriate in many other situations, including supply chain management, healthcare, and social services. \\
 One of the well-known ledgers that can create decentralized applications and manage cryptocurrencies using smart contracts is the Ethereum blockchain \cite{Third}. It serves as a platform for programmers to create decentralized applications (DApp), as William cites, by implementing smart contracts in a decentralized paradigm. \\
 A smart contract is a piece of code created in the Solidity programming language, stored on the blockchain, and responsible for executing certain blockchain-based functionality in accordance with the terms of the contract in the most reliable manner  \cite{Third}. \\
-With the widespread adoption of distributed ledger technology like blockchain in a variety of contexts (such as public blockchain, private blockchain, etc.), the requirement for data queries and index entries is becoming more crucial. The integration of data recorded on the blockchain with outside sources is crucial; in other words, connected data is required to \cite{third}. \\
+With the widespread adoption of distributed ledger technology like blockchain in a variety of contexts (such as public blockchain, private blockchain, etc.), the requirement for data queries and index entries is becoming more crucial. The integration of data recorded on the blockchain with outside sources is crucial; in other words, connected data is required \cite{Third}. \\
 The World Wide Web was founded by Tim Berners-Lee, who asserts that "linked data is the semantic web done right, and the web done right" \cite{Hector}. 
 In addition to enabling access, integration, and query on data sources, the semantic web is a collection of standards that fosters communication between various application domains and produces a variety of insights. Additionally, it can employ ontology to represent Ethereum elements like blocks and transactions to support SPARQL web queries and dataset linking \cite{Third}. \\
 In this thesis, we address the following issues: The first step is to figure out how to incorporate DALICC library semantic licenses into a smart contract. 
 Data Licenses Clearance Center, or DALICC, is a framework that encourages automated rights clearance in order to detect license conflicts and lower the cost of high transactions associated with human licensing content clearance \cite{Anna}.\\
-The second is that although DALICC licenses are already linked to the blockchain, the records themselves are not semantically represented. As a result, we created a semantic model using the EthOn ontology \cite{http://ethon.consensys.net/}, and mapped it to data that we obtained from deployed smart contracts in RDF format. \\
-In order to solve these concerns, we built a DApp to attach licenses to content, using earlier work on the subject \footnote{https://github.com/kilianhnt/dalicc-license-annotator} \cite{David}. We then used semantic web approaches to link data taken from Ethereum transactions to relevant EthOn ontology concepts. \\
+The second is that although DALICC licenses are already linked to the blockchain, the records themselves are not semantically represented. As a result, we created a semantic model using the EthOn ontology\footnote{http://ethon.consensys.net}, and mapped it to data that we obtained from deployed smart contracts in RDF format. \\
+In order to solve these concerns, we built a DApp to attach licenses to content, using earlier work on the subject\footnote{https://github.com/kilianhnt/dalicc-license-annotator} \cite{David}. We then used semantic web approaches to link data taken from Ethereum transactions to relevant EthOn ontology concepts. \\
 To have a deeper understanding of the technology being employed, we discussed blockchain, Ethereum, distributed ledger technology, and some additional relevant subjects in the first chapter. We discussed some research on how the semantic web can be used with blockchain in the following chapter. Additionally, we demonstrated a DApp in the last chapter to illustrate how smart contracts may be integrated with the DALICC semantic licenses library and represented semantically in this deployment. \\
